@@ -39,6 +39,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
+
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -53,6 +54,42 @@
 							<mainClass>com.virtualpairprogrammers.Main</mainClass>
 						</manifest>
 					</archive>
+				</configuration>
+			</plugin>
+			<!-- Maven Jar Plugin -->
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.virtualpairprogrammers.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<!-- Maven Surefire Plugin for Testing -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
+			<!-- Exec Maven Plugin for Running Main Class -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<mainClass>com.virtualpairprogrammers.Main</mainClass>
+					<arguments>
+						<argument>--add-opens</argument>
+						<argument>java.base/java.lang=ALL-UNNAMED</argument>
+					</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
